# trellis

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  AUTORESEARCH-RESULTS.md  CODE-REVIEW-2026-03-09.md  Dockerfile  LICENSE  README.md  STATUS.md  alembic.ini  autoresearch.jsonl  autoresearch.md  autoresearch.sh  docker-compose.yml  e2e_verify.py  pyproject.toml  trellis.db-shm  trellis.db-wal
alembic/: env.py
dashboard/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  package.json.bak
deploy/: README.md  deploy.sh  main.bicep  main.json  seed.sh  troubleshoot.sh
docs/: DEMO-GUIDE.md  INTELLIGENT-ROUTING-DESIGN.md  OPTIMIZATION-ENGINE.md  PITCH.md  TEAMS-DEPLOY-RUNBOOK.md  TEAMS-SETUP.md
examples/: README.md  demo_envelopes.json  demo_full_platform.py  demo_healthcare_pipeline.py  demo_multi_agent.py  docker-demo.sh  setup_real_agents.py
research/: 2026-03-03-manifest-analysis.md  code-review-overnight-2026-03-08.md  code-review-sonnet-2026-03-07.md  code-review-trellis.md  phi-detection-benchmark.md  phi_benchmark.py  phi_benchmark_results.json  refactor-summary.md
static/: __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  index.html
tests/: conftest.py  test_agent_context.py  test_agent_loop.py  test_alert_wiring.py  test_alerts.py  test_audit_compactor.py  test_bot_service.py  test_cisa_kev.py  test_classification.py  test_cross_agent_workflow.py  test_delegation.py  test_document_adapter.py  test_embeddings.py  test_gateway_api.py  test_health_auditor.py  test_hl7_fhir.py  (+16 more)
(+144 files in other folders)
